[package]
name = "roll_a_ball"
version = "0.1.0"
edition = "2021"
authors = ["Luc Bergeron"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
bevy_rapier3d = { version = "0.22.0", features = ["simd-stable", "debug-render-3d"] }
bevy-inspector-egui = "0.19"